Line break added before backup:yes

--- a/roles/ood_vnc_form/tasks/main.yml
+++ b/roles/ood_vnc_form/tasks/main.yml
@@ -14,4 +14,5 @@
 - name: Put noVNC.html.erb in place
   copy:
     src: custom-novnc.html.erb
-    dest: /var/www/ood/apps/sys/dashboard/app/views/batch_connect/sessions/connections/_novnc.html.erb    backup: yes
+    dest: /var/www/ood/apps/sys/dashboard/app/views/batch_connect/sessions/connections/_novnc.html.erb
+    backup: yes
