--- a/roles/ohpc_matlab/tasks/main.yaml
+++ b/roles/ohpc_matlab/tasks/main.yaml
@@ -18,6 +18,7 @@
   unarchive:
     src: "{{ matlab_destination  }}"
     dest: "{{ matlab_clustershare }}"
+    remote_src: yes
 
 - name: Create directory
   file:
@@ -28,4 +29,4 @@
 - name: Copy modulefile from template to /export/eb/modules/all/matlab/ 
   template:
     src: r2018a
-    dest: "{{ matlab_module_dir  }}/r2018a"
+    dest: "{{ matlab_module_dir }}/r2018a"
