changed tasks/mainlyaml to accomodate previous commit changes

--- a/roles/ood_matlab/tasks/main.yaml
+++ b/roles/ood_matlab/tasks/main.yaml
@@ -8,14 +8,12 @@
     dest: /var/www/ood/apps/sys/matlab/
     clone: yes
 
-- name: Replace submit.yml.erb
+- name: Replace form.yml
   template:
+    src: form.yml
+    dest: /var/www/ood/apps/sys/matlab/form.yml
+
+- name: Replace form submission template
+  copy:
     src: submit.yml
     dest: /var/www/ood/apps/sys/matlab/submit.yml.erb
-
-- name: modify to fit our environment
-  lineinfile:
-    path: /var/www/ood/apps/sys/matlab/form.yml
-    regexp: '^cluster:'
-    line: 'cluster: {{ cluster_name }}'
-
