--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Enable Copr Repos
+  shell: yum -y copr enable "{{ item.repo_name }}"
+  with_items: "{{ copr_repos }}"
+  when: enable_copr == true and inventory_hostname in item.host
+
 - name: Enable user registration redirect
   replace:
     path: /etc/ood/config/ood_portal.yml
