Install virtualenv via pip

--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -7,6 +7,9 @@
 - name: Install mod_wsgi for httpd24
   yum: name="{{ mod_wsgi_pkg_name }}" state=latest
 
+- name: Install virtualenv via pip
+  pip: name=virtualenv state=latest
+
 - name: Enable user registration redirect
   replace:
     path: /etc/ood/config/ood_portal.yml
