Create logs folder inside user reg app
Alternatively, we can create the folder in git repo.

--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -25,6 +25,11 @@
     repo: "{{ user_register_app_repo }}"
     dest: "{{ user_register_app_path }}"
 
+- name: Create logs folder for user register app
+  file:
+    path: "{{ user_register_app_path }}/logs"
+    state: directory
+
 - name: Enable user registration redirect
   replace:
     path: /etc/ood/config/ood_portal.yml
