--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -30,6 +30,12 @@
     path: "{{ user_register_app_path }}/logs"
     state: directory
 
+- name: Install requirements in virtualenv
+  pip:
+    requirements: requirements.txt
+    virtualenv: venv
+    chdir: "{{ user_register_app_path }}"
+
 - name: Enable user registration redirect
   replace:
     path: /etc/ood/config/ood_portal.yml
