--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -36,6 +36,11 @@
     virtualenv: venv
     chdir: "{{ user_register_app_path }}"
 
+- name: Put apache config file in place
+  template:
+    src: user-reg_conf.j2
+    dest: "/opt/rh/httpd24/root/etc/httpd/conf.d/user-reg.conf"
+
 - name: Enable user registration redirect
   replace:
     path: /etc/ood/config/ood_portal.yml
