--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -41,6 +41,11 @@
     src: user-reg_conf.j2
     dest: "/opt/rh/httpd24/root/etc/httpd/conf.d/user-reg.conf"
 
+- name: Put wsgi config file in place
+  template:
+    src: wsgi.j2
+    dest: "{{ user_register_app_path }}/{{ user_register_app}}.wsgi"
+
 - name: Enable user registration redirect
   replace:
     path: /etc/ood/config/ood_portal.yml
