Install python2-pip via yum

--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -7,6 +7,9 @@
 - name: Install mod_wsgi for httpd24
   yum: name="{{ mod_wsgi_pkg_name }}" state=latest
 
+- name: Install pip via yum
+  yum: name=python2-pip state=latest
+
 - name: Install virtualenv via pip
   pip: name=virtualenv state=latest
 
