--- a/roles/ood_matlab/tasks/main.yaml
+++ b/roles/ood_matlab/tasks/main.yaml
@@ -17,3 +17,8 @@
   copy:
     src: submit.yml
     dest: /var/www/ood/apps/sys/matlab/submit.yml.erb
+
+- name: Replace form script template
+  copy:
+    src: script.sh.erb 
+    dest: /var/www/ood/apps/sys/matlab/script.sh.erb 
