Add task to remove existing matlab app install
This is required to avoid failure on the clone task.
Also simply good practice for predictable state of the role.

--- a/roles/ood_matlab/tasks/main.yaml
+++ b/roles/ood_matlab/tasks/main.yaml
@@ -1,3 +1,8 @@
+- name: Remove existing matlab app install
+  file:
+    path: /var/www/ood/apps/sys/matlab/
+    state: absent
+
 - name: matlab directory
   file:
     path: /var/www/ood/apps/sys/matlab
