Clean up form code to match generic env
The basic install doesn't have any form specific javascript
or need to respond to distinct submit parameters.

Remove form.js
Remove gpu conditional from submit.yml

--- a/roles/ood_matlab/tasks/main.yaml
+++ b/roles/ood_matlab/tasks/main.yaml
@@ -18,6 +18,11 @@
     src: form.yml
     dest: /var/www/ood/apps/sys/matlab/form.yml
 
+- name: Remove form.js
+  file:
+    path: /var/www/ood/apps/sys/matlab/form.js
+    state: absent
+
 - name: Replace form submission template
   copy:
     src: submit.yml
