Set form options to match default dev app path

--- a/roles/ood_matlab/templates/form.yml
+++ b/roles/ood_matlab/templates/form.yml
@@ -30,7 +30,7 @@ attributes:
     label: "MATLAB version"
     help: "This defines the version of MATLAB you want to load."
     options:
-      - [ "R2018a", "rc/matlab/R2018a" ]
+      - [ "R2018a", "matlab/R2018a" ]
 form:
   - version
   - bc_num_hours
