Create variables for ohpc_matlab and avoid hard coded paths in role
* Move the hard-coded paths from the ohpc_matlab role install tasks
and module template file into variables in group_vars/all
* Restore license file path and docs url (with generic paths)
* Remove unused commented code from module template

--- a/roles/ohpc_matlab/tasks/main.yaml
+++ b/roles/ohpc_matlab/tasks/main.yaml
@@ -22,11 +22,11 @@
 
 - name: Create directory
   file:
-    path: "{{ matlab_module_dir }}"
+    path: "{{ matlab_module_path }}/{{ matlab_module_appdir }}"
     state: directory
     mode: 0755
 
-- name: Copy modulefile from template to /export/eb/modules/all/matlab/ 
+- name: Copy modulefile from template to module path
   template:
-    src: r2018a
-    dest: "{{ matlab_module_dir }}/r2018a"
+    src: "{{ matlab_module_file }}"
+    dest: "{{ matlab_module_path }}/{{ matlab_module_appdir }}/{{ matlab_module_file }}"
