--- a/ood.yaml
+++ b/ood.yaml
@@ -3,8 +3,9 @@
   roles:
     - { name: 'prep_ood', tags: 'prep_ood' }
     - { name: 'ood', tags: 'ood' }
-    - { name: 'warewulf_sync', tags: 'warewulf_sync' }
     - { name: 'ood_user_reg', tags: 'ood_user_reg', when: enable_user_reg }
+    - { name: 'reg_user_create_scripts', tags: 'reg_user_create_scripts', when: enable_user_create_scripts }
+    - { name: 'warewulf_sync', tags: 'warewulf_sync' }
     - { name: 'ood_jupyter', tags: 'ood_jupyter', when: jupyter_provision}
     - { name: 'ood_vnc_form', tags: 'ood_vnc_form' }
     - { name: 'ood_add_rstudio', tags: 'ood_add_rstudio', when: rstudio_provision }
