--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -67,22 +67,23 @@
   command: /opt/ood/ood-portal-generator/sbin/update_ood_portal
   ignore_errors: yes
 
-- name: Remove existing RegUser - {{ RegUser_app_user }} on OOD
-  user:
-    name: "{{ RegUser_app_user }}"
-    state: absent
-    remove: yes
-
-- name: Get UID of RegUser - {{ RegUser_app_user }} from OHPC
+- name: Get UID and GID of RegUser from OHPC
   stat: 
      path: /home/{{ RegUser_app_user }}
   register: RegUser_stat
 
-- name: Create RegUser - {{ RegUser_app_user }} on OOD
+- name: Create Group for RegUser on OOD
+  group:
+    gid: "{{ RegUser_stat.stat.gid  }}"
+    name: "{{ RegUser_app_user  }}"
+    state: present
+
+- name: Create RegUser on OOD
   user:
     name: "{{ RegUser_app_user }}"
     comment: "{{ RegUser_app_user_full_name }}"
     shell: /bin/bash
     uid: "{{ RegUser_stat.stat.uid }}"
+    group: "{{ RegUser_app_user  }}"
     createhome: no
     state: present
