--- a/roles/ohpc_user_reg/tasks/main.yml
+++ b/roles/ohpc_user_reg/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create RegUser - {{ RegUser_app_user }} on OHPC
+- name: Create RegUser on OHPC
   user:
     name: "{{ RegUser_app_user }}"
     comment: "{{ RegUser_app_user_full_name }}"
@@ -8,6 +8,9 @@
     home: /home/{{ RegUser_app_user }}
     state: present
 
-- name: Create Cluster keys for RegUser - {{ RegUser_app_user }} on OHPC
+- name: Create Cluster keys for RegUser on OHPC
   script: /usr/bin/cluster-env
   become_user: "{{ RegUser_app_user }}"
+
+- name: WareWulf Sync for RegUser on OHPC
+  command: wwsh file resync passwd group shadow
