--- a/roles/reg_user_create_scripts/tasks/main.yml
+++ b/roles/reg_user_create_scripts/tasks/main.yml
@@ -1,9 +1,14 @@
 ---
+- name: Remove existing cloned repo
+  file: 
+    path: "{{ user_create_scripts_path }}"
+    state: absent
+
 - name: Creates directory to clone ohpc user create
   file:
     path: "{{ user_create_scripts_path }}"
     state: directory
-
+    
 - name: Clone template repo from upstream
   git:
     repo: "{{ user_create_script_repo }}"
