Assign headnode static IP address to the cluster network
The internal network nic for the head node relies on static
IP address assignement. Explicitly assign the IP address
via so NetworkManager doesn't default to requesting an IP
address via DHCP and causing the eth1 interface to pend
configuration idefinitly.  Without eth1 all communication
with the head node on the cluster network will fail, e.g.
sacctmgr setup.

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -89,6 +89,9 @@
      command: nmcli con mod 'System {{ private_interface }}' connection.id '{{ private_interface }}'
      when: "'System' in network_profile_name.stdout"
 
+   - name: assign head node static ip on cluster network
+     command: nmcli con mod {{ private_interface }} ipv4.addresses {{ headnode_private_ip }}/24 ipv4.method manual
+
    - name: add private interface to internal zone via nmcli
      command: nmcli connection modify {{ private_interface }} connection.zone internal
 
