--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -100,7 +100,7 @@
 
 # Changing it temporarily to stop
    - name: firewalld restart # to load new slurm service
-     service: name=firewalld state=stopped
+     service: name=firewalld state=stopped enabled=false
 
 ## This section seems to be redundant 
 ##   - name: add interface to internal zone firewall-cmd
