--- a/roles/compute_build_image/tasks/main.yml
+++ b/roles/compute_build_image/tasks/main.yml
@@ -8,6 +8,7 @@
   yum:
     state: present
     name:
+      - autofs
       - chrony
       - lmod-ohpc
       - grub2
@@ -37,6 +38,44 @@
   command: python setup.py install
   args:
     chdir: /tmp/websockify-0.8.0
+
+# Change to autofs
+- name: add autofs maps
+  lineinfile:
+    path: "/etc/auto.master.d/uab-dev.autofs"
+    line: "{{ item.path }} /etc/auto.{{ item.name }}"
+    create: yes
+  with_items:
+    - { name: "home", path: "/home"}
+    - { name: "opt-ohpc-pub", path: "/opt/ohpc/pub"}
+    - { name: "export", path: "/export"}
+
+- lineinfile:
+    path: "/etc/auto.{{ item.name }}"
+    line: "* -{{ item.opt }} {{ headnode_private_ip }}:{{ item.path }}/&"
+    create: yes
+  with_items:
+    - { name: "home", opt: "rw,soft,intr,_netdev", path: "/home"}
+    - { name: "opt-ohpc-pub", opt: "ro", path: "/opt/ohpc/pub"}
+    - { name: "export", opt: "ro", path: "/export"}
+
+- name: Put SELinux in permissive mode, logging actions that would be blocked.
+  selinux:
+    policy: targeted
+    state: permissive
+
+- name: Create folder for mounting
+  file:
+    state: directory
+    path: /export
+    owner: root
+    group: root
+    mode: 0777
+
+- name: Enable autofs on compute image
+  service:
+    name: autofs
+    enabled: yes
 
 # After we installed Xfce, the compute node is set to bootup in graphical mode.
 # This task is to unset that back to multi-user mode.
