Update chrony.conf in compute image

--- a/roles/compute_build_image/tasks/main.yml
+++ b/roles/compute_build_image/tasks/main.yml
@@ -88,6 +88,12 @@
     state: stopped
     enabled: no
 
+- name: add headnode to compute chrony.conf
+  lineinfile:
+    line: "server {{ headnode_private_ip }}"
+    dest: /etc/chrony.conf
+    state: present
+
 - name: Enable chronyd on compute image
   service:
     name: chronyd
