Replacing hard-coded 24 with private_network_mask

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -154,7 +154,7 @@
      lineinfile:
        path: /etc/chrony.conf
        regexp: '^#allow 192'
-       line: "allow all {{ private_network }}/24"
+       line: "allow all {{ private_network }}/{{ private_network_mask }}"
        state: present
        
  
