Fix CentOS SCLo repo access
The CentOS 7.6 repos for SCLo stopped working during testing.
Manually setting baseurl works around the issue.

See:

https://discourse.osc.edu/t/errors-with-rhel-server-rhscl-7-rpms-repo-in-the-past-week/494/8

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -11,6 +11,23 @@
     state: enabled
   when: ansible_distribution == "RedHat" and ansible_distribution_major_version == '7'
 
+- name: Fix failing SCL RH7 repo with static baseurl
+  ini_file:
+    path: /etc/yum.repos.d/CentOS-SCLo-scl-rh.repo
+    section: centos-sclo-rh
+    option: baseurl
+    #value: http://www.gtlib.gatech.edu/pub/centos/7/sclo/$basearch/rh/
+    value: http://mirror.centos.org/centos/7.6.1810/sclo/x86_64/rh/
+    backup: yes
+
+- name: Fix remove mirrorlist from SCL RH7
+  ini_file:
+    path: /etc/yum.repos.d/CentOS-SCLo-scl-rh.repo
+    section: centos-sclo-rh
+    state: absent
+    option: mirrorlist
+    backup: no
+
 - name: Add Open OnDemand’s repository hosted by the Ohio Supercomputer Center
   yum:
     name: "{{ ood_rpm_repo }}"
