Add update apache config task to ood_user_reg_cloud
ood-portal-generator needs to be run after the apache config
is changed for the user reg app in order to deploy the apache
config.

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -63,3 +63,6 @@
     group: root
     mode: 0755
 
+- name: Build the updated Apache config
+  command: /opt/ood/ood-portal-generator/sbin/update_ood_portal
+  ignore_errors: yes
