Fix yaml formatting of ood-ops playbook.

--- a/ood-ops.yaml
+++ b/ood-ops.yaml
@@ -1,3 +1,4 @@
-hosts: ood
-roles:
-  - { name: 'ood_user_reg_ops', tags: 'ood_user_reg_ops' }
+---
+- hosts: ood
+  roles:
+    - { name: 'ood_user_reg_ops', tags:'ood_user_reg_ops' }
