Re-format httpd24 restart task into multi-line entry

--- a/roles/ood_user_reg_ops/tasks/main.yml
+++ b/roles/ood_user_reg_ops/tasks/main.yml
@@ -19,5 +19,7 @@
     createhome: no
     state: present
 
-- name: restart httpdd
-    service: name=httpd state=restarted
+- name: Restart service httpd24, in all cases
+  service:
+    name: httpd24-httpd
+    state: restarted
