Add ood_igv in ood.yaml

--- a/ood.yaml
+++ b/ood.yaml
@@ -10,6 +10,7 @@
     - { name: 'ood_matlab', tags: 'ood_matlab', when: matlab_provision }
     - { name: 'ood_sas', tags: 'ood_sas', when: sas_provision }
     - { name: 'ood_ansys', tags: 'ood_ansys', when: ansys_provision }
+    - { name: 'ood_igv', tags: 'ood_igv', when: igv_provision }
     - { name: 'ood_firewall_and_services', tags: 'ood_firewall_and_services' }
     - { name: 'ohpc_firewall_and_services', tags: 'ohpc_firewall_and_services' }
     - { name: 'ood_shib_sso', tags: 'ood_shib_sso', when: enable_shib }
