Fix repo path for CentOS SCLo to major release base path
This improves #cd58c183 to use just the major os release rather
than build base path to ensure software collection dependencies
continue to be installed over subsequent releases.

--- a/roles/ood/tasks/main.yaml
+++ b/roles/ood/tasks/main.yaml
@@ -17,7 +17,7 @@
     section: centos-sclo-rh
     option: baseurl
     #value: http://www.gtlib.gatech.edu/pub/centos/7/sclo/$basearch/rh/
-    value: http://mirror.centos.org/centos/7.6.1810/sclo/x86_64/rh/
+    value: http://mirror.centos.org/centos/7/sclo/x86_64/rh/
     backup: yes
 
 - name: Fix remove mirrorlist from SCL RH7
