--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -10,28 +10,30 @@
      when: build_kernel_ver != ansible_kernel
 
    - name: install necessary stuff
-     yum: name={{ item }} state=latest
-     with_items:
-       - "MySQL-python"
-       - "epel-release"
-       - "wget" 
-       - "tcpdump"
-       - "whois" 
-       - "lsof" 
-       - "xinetd"
-       - "vim" 
-       - "net-tools"
-       - "exportfs" 
-       - "firewalld"
-       - "chrony"
-       - "pciutils"
-       - "rsync"
-       - "bash-completion"
-       - "libselinux-python"
-       - "libsemanage-python"
-       - "policycoreutils"
-       - "NetworkManager"
-       - "NetworkManager-glib"
+     yum:
+       name: [
+               "MySQL-python",
+               "epel-release",
+               "wget",
+               "tcpdump",
+               "whois",
+               "lsof",
+               "xinetd",
+               "vim",
+               "net-tools",
+               "exportfs",
+               "firewalld",
+               "chrony",
+               "pciutils",
+               "rsync",
+               "bash-completion",
+               "libselinux-python",
+               "libsemanage-python",
+               "policycoreutils",
+               "NetworkManager",
+               "NetworkManager-glib",            
+             ]
+       state: latest
 #       - "lua"  # testing; this could fix the lmod-ohpc issue?
  #otherwise, do a yum update --skip-broken, yum update...
 
