--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -79,7 +79,7 @@
    - name: enable masquerade
      firewalld: 
        zone: public
-       masquerade: yes
+       masquerade: 'yes'
        permanent: yes
        state: enabled
      when: enable_compute_NAT == true
