--- a/roles/ohpc_add_easybuild/tasks/main.yaml
+++ b/roles/ohpc_add_easybuild/tasks/main.yaml
@@ -23,7 +23,7 @@
 # Ideal solution is to provide a python specific to EasyBuild
 # likely via software collections
 - name: Fix EasyBuild setuptools dependency on version > 17.1
-  shell: pip install -U setuptools
+  shell: pip install -U setuptools wheel
 
 - name: Download EasyBuild bootstrap script
   get_url:
