--- a/roles/ohpc_ansys/tasks/main.yaml
+++ b/roles/ohpc_ansys/tasks/main.yaml
@@ -1,22 +1,54 @@
 - name: Create directory
   file:
-    path: "{{ ansys_clustershare }}/{{ ansys_module_file }}/v191/Framework/bin/Linux64/"
+    path: "{{ ansys_install_root }}/{{ item }}/bin"
     state: directory
     mode: 0755
+  with_items: "{{ ansys_versions }}"
+   
 
-- name: Install SAS (Executable file to run  xfce4desktop)
+- name: Install ansys (Executable file to run  xfce4desktop)
   template:
-    src: "{{ ansys_executable }}"
-    dest: "{{ ansys_clustershare }}/{{ ansys_module_file }}/v191/Framework/bin/Linux64/{{ ansys_executable }}"
+    src: runwb2
+    dest: "{{ ansys_install_root }}/{{ item }}/v191/Framework/bin/"
     mode: a+x
+  with_items: "{{ ansys_versions }}"
 
 - name: Create modules directory
   file:
-    path: "{{ ansys_module_path }}/{{ ansys_module_appdir }}"
+    path: "{{ ansys_modulefiles_dir }}"
     state: directory
     mode: 0755
 
 - name: Copy modulefile from template to module path
   template:
-    src: "{{ ansys_module_file }}"
-    dest: "{{ ansys_module_path }}/{{ ansys_module_appdir }}/{{ ansys_module_file }}"
+    src: 19.1
+    dest: "{{ ansys_modulefiles_dir }}/{{ item }}"
+  with_items: "{{ ansys_versions }}"
+
+
+- name: Check if modulefiles path is in default MODULEPATH
+  shell: grep "{{ cluster_shared_folder }}/modulefiles" /etc/profile.d/lmod.sh
+  ignore_errors: yes
+  register: default_modulepath_sh
+
+- shell: grep "{{ cluster_shared_folder }}/modulefiles" /etc/profile.d/lmod.csh
+  ignore_errors: yes
+  register: default_modulepath_csh
+
+- name: Add modulefiles path into default MODULEPATH
+  replace:
+    path: /etc/profile.d/lmod.sh
+    regexp: '(MODULEPATH=.*)'
+    replace: '\1:{{ cluster_shared_folder }}/modulefiles'
+    backup: yes
+  when: default_modulepath_sh.stdout == ""
+
+- replace:
+    path: /etc/profile.d/lmod.csh
+    regexp: '(MODULEPATH "[^"]*)'
+    replace: '\1:{{ cluster_shared_folder }}/modulefiles'
+    backup: yes
+  when: default_modulepath_csh.stdout == ""
+
+- name: Update file in warewulf file database
+  command: wwsh file sync
