--- a/roles/ohpc_add_easybuild/tasks/main.yaml
+++ b/roles/ohpc_add_easybuild/tasks/main.yaml
@@ -4,7 +4,9 @@
     state: present
     name: 
       - '@Development Tools'
-      - python-pip
+      - python3
+      - python3-pip
+
 
 - name: Create user build
   user:
