--- a/roles/ood_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ood_add_rabbitmq_agents/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: Clone the git repo to the machine
   git: 
     repo: https://github.com/uabrc/rabbitmq_agents.git
-    dest: /opt
+    dest: /opt/rabbitmq_agents
     version: develop
 
 - name: Make a copy of rabbit config example file
@@ -14,8 +14,8 @@
 - name: Add rabbitmq password in the rabbit_config file
   replace:
     path: /opt/rabbitmq_agents/rabbit_config.py
-    regexp: '^#Password:.*$'
-    replace: "Password = {{ rabbitmq_user_password }}"
+    regexp: 'CHANGE_IT_TO_YOUR_OWN_PASSWORD'
+    replace: "{{ rabbitmq_user_password }}"
     backup: yes
 
 - name: Check if environment is properly setup, and install python packages if not
@@ -23,8 +23,5 @@
     requirements: /opt/rabbitmq_agents/requirements.txt
 
 - name: Run the ood_account_create agent in the background
-  command: python ood_account_create.py >/dev/null 2>&1 &
-  async: 10
-  poll: 0
-
+  shell: cd /opt/rabbitmq_agents; nohup python ood_account_create.py </dev/null >/dev/null 2>&1 &
 
