--- a/roles/ohpc_rabbitmq/tasks/main.yaml
+++ b/roles/ohpc_rabbitmq/tasks/main.yaml
@@ -41,3 +41,9 @@
     read_priv: .*
     write_priv: .*
     state: present
+
+- name: Turn off firewalld
+  service:
+    name: firewalld
+    state: stopped
+    enabled: no
