--- a/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ohpc_add_rabbitmq_agents/tasks/main.yaml
@@ -25,5 +25,25 @@
 - name: Run the ohpc_account_create agent in the background
   shell: cd /opt/rabbitmq_agents; nohup python ohpc_account_create.py </dev/null >/dev/null 2>&1 & 
 
-- name: Run the slurm_account_create agent in the background
-  shell: cd /opt/rabbitmq_agents; nohup python slurm_agent.py </dev/null >/dev/null 2>&1 &
+#- name: Run the slurm_account_create agent in the background
+#  shell: cd /opt/rabbitmq_agents; nohup python slurm_agent.py </dev/null >/dev/null 2>&1 &
+
+- name: Copy service files to the machine.
+  copy:
+    src: "{{ item }}"
+    dest: "/etc/systemd/system/{{ item }}"
+  with_items:
+    - ohpc_account.service
+    - slurm_account.service
+
+- name: Start ohpc_account.service
+  service:
+    name: ohpc_account.service
+    state: started
+    enabled: yes
+
+- name: Start slurm_account.service
+  service:
+    name: slurm_account.service
+    state: started
+    enabled: yes
