changing the name

--- a/roles/ood_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ood_add_rabbitmq_agents/tasks/main.yaml
@@ -32,7 +32,7 @@
   with_items:
     - ood_account.service
 
-- name: Start ohpc_account.service
+- name: Start ood_account.service
   service:
     name: ood_account.service
     state: started
