Add comment about turning off firewall.
It seems this was inherited from earlier use on ood.  Firewall should be off by default on ohpc as currently deployed in dev.  We should figure out the ports needed.

--- a/roles/ohpc_rabbitmq/tasks/main.yaml
+++ b/roles/ohpc_rabbitmq/tasks/main.yaml
@@ -42,6 +42,8 @@
     write_priv: .*
     state: present
 
+# jpr: this may be redundant for ohpc
+# also, we should know what ports to open. ;)
 - name: Turn off firewalld
   service:
     name: firewalld
