Instal python3 on ohpc via role pre_ohpc

--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -16,6 +16,7 @@
      yum:
        state: latest
        name:
+         - "python3"
          - "MySQL-python"
          - "epel-release"
          - "wget" 
