--- a/roles/prep_ood/tasks/main.yaml
+++ b/roles/prep_ood/tasks/main.yaml
@@ -16,6 +16,7 @@
     state: installed
     update_cache: true
     name:
+      - python3
       - nfs-utils
       - ohpc-base-compute
       - slurm-ohpc
