Add virtualenv_command parameter
Tell ansible to use venv module provided by python3

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -24,6 +24,7 @@
   pip:
     requirements: requirements.txt
     virtualenv: venv
+    virtualenv_command: /usr/bin/python3 -m venv
     chdir: "{{ user_register_app_path }}"
 
 - name: Put apache config file in place
