--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
-- name: Install pip via yum
-  yum: name=python3-pip state=latest
+- name: Install packages via yum
+  yum:
+    name:
+      - python3-pip
+      - python3-devel
+    state: latest
 
 - name: Remove existing user register app install
   file:
