changed print statement to start celery.service

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -52,7 +52,7 @@
   with_items:
     - celery.service
 
-- name: Start ood_account.service
+- name: Start celery.service
   service:
     name: celery.service
     state: started
